# fooniks

./: LICENSE  ProjectHome.md  anims  announce  crashinfo.txt  samp-npc  server.cfg  server_log.txt
APPT/: APPT.map  Luksuskorter20floor.map
browser/: meta.xml
citizens/: citizens_common.lua
conf/: passwd
filterscripts/: Job_Carbage.amx  Smart_NPC.amx  Smart_NPC.pwn  poolGame.amx  poolGame.pwn
freecam/: freecam.lua
gamemodes/: Phoenix.amx  Phoenix.pwn
helpmanager/: meta.xml
include/: phoenix_Core.inc
kuju/: meta.xml
modules/Texturizer/: CMakeLists.txt
modules/Texturizer/TextureWriter/: CMakeLists.txt  ChunkInfo.hpp
modules/Texturizer/Texturizer/: CFunctions.cpp  CMakeLists.txt  ImgData.cpp  ImgData.h  ModuleFilePaths.cpp  ModuleFilePaths.h  TextureContainer.cpp  TextureContainer.h  ml_base.cpp  ml_base.h
npcmodes/: Igor_Takso.amx  Igor_Takso.pwn  Jann.amx  Jann.pwn  Job_Carbage.amx  Smart_NPC.amx  Smart_NPC.pwn
old-Samp/: mysql_log.txt  server.cfg  server_log.txt
pawno/: settings.ini
phoenix-Base/: base-server.lua  meta.xml
phoenix-Characters/: characters-client.lua  characters-server.lua
phoenix-Chat/: chat-server.lua
phoenix-Infospots/: infospots-client.lua  infospots-server.lua  meta.xml
phoenix-Pockets/: meta.xml  pockets-server.lua
phoenix-Reports/: c_teatamine.lua  s_teatamine.lua
phoenix-Skills/: skills-client.lua  skills.xml
phoenix-SpawnManager/: spawn-server.lua
phoenix-Vehicles/: meta.xml  ph_vehicles.sql  vehicles-server.lua
phoenix_Base/: about.txt  base-PhoenixTab.lua  base-client.lua  base-server.lua  meta.xml  motd_c.lua  used.txt
phoenix_Business/: business-client.lua  business-server.lua
phoenix_Characters/: character-creation.lua  characters-client.lua  characters-server.lua  charfields.xml  meta.xml  pMenu.lua  pMenu_s.lua
phoenix_Chat/: chat-client.lua  chat-server.lua  chat-server.lua.bak  meta.xml
(+495 files in other folders)
